--- a/src/style.scss
+++ b/src/style.scss
@@ -11,6 +11,7 @@ input#color-input {
   width: 50px;
   height: 50px;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .help-button {
@@ -40,6 +41,8 @@ input#color-input {
     color: #fff;
     margin: 5px 0;
     font-size: 0.9em;
+    font-weight: 100;
+    line-height: 1.3em;
     border-radius: 10px;
   }
 
